<resources>
    <string name="app_name">Ma réu</string>
    <string name="action_settings">Settings</string>
    <string name="Menu_item">More options</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="addemail">Ajouter l\'email</string>
    <string name="MailParticipant">Email du participant</string>
    <string name="Subject_meeting">Sujet de la réunion</string>
    <string name="SelectTimeMeeting">Sélectionner l\'heure de la réunion</string>
    <string name="SelectDateMeeting">Sélectionner la date de la réunion</string>
    <string name="SelectEndTimeMeeting">Sélectionner l\'heure de fin de la réunion</string>
    <string name="SelectTimeMeetingSmall">Heure de la réunion</string>
    <string name="SelectDateMeetingSmall">Date de la réunion</string>
    <string name="SelectEndTimeMeetingSmall">Heure de fin de la réunion</string>
    <string name="creat">Enregistrer</string>
    <string name="Listmeeting">Afficher la liste des réunions</string>
    <string name="filterlocation">Filtre par lieu</string>
    <string name="filterdate">Filtre par date</string>
    <string name="TimeStartTextView">L\'heure de début :</string>
    <string name="TimeEndTextView">L\'heure de Fin :</string>
    <string name="DateStartTextView">La date de la réunion :</string>
    <string-array name="meeting_location">
        <item>Réunion 1</item>
        <item>Réunion 2</item>
        <item>Réunion 3</item>
        <item>Réunion 4</item>
        <item>Réunion 5</item>
        <item>Réunion 6</item>
        <item>Réunion 7</item>
        <item>Réunion 8</item>
        <item>Réunion 9</item>
        <item>Réunion 10</item>
    </string-array>

</resources>
