<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <Spinner
        android:id="@+id/spinner_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
